@@ -3,6 +3,7 @@
   <item>Campaign</item>
  </portal_type>
  <portal_type id="Event Module">
+  <item>Visit</item>
   <item>Letter</item>
   <item>Note</item>
   <item>Phone Call</item>
