@@ -25,3 +25,6 @@ Sale Opportunity Module | view
 Sale Opportunity | view
 Support Request Module | view
 Support Request | view
+Visit | assessment
+Visit | preview
+Visit | view
