@@ -4,6 +4,7 @@ Event Module | Letter
 Event Module | Mail Message
 Event Module | Note
 Event Module | Phone Call
+Event Module | Visit
 Meeting Module | Meeting
 Sale Opportunity Module | Sale Opportunity
 Support Request Module | Support Request
