@@ -16,3 +16,5 @@ Sale Opportunity | edit_workflow
 Sale Opportunity | sale_opportunity_workflow
 Support Request | edit_workflow
 Support Request | ticket_workflow
+Visit | edit_workflow
+Visit | event_workflow
