@@ -1,3 +1,6 @@
+2007-09-11 Romain
+* Add Visit portal type
+
 2007-09-11 Thierry
 * Improve Ticket workflow (add worklists)
 * Add missing portal type actions
